// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check ticket data 1`] = `
Object {
  "emergency": Any<Boolean>,
  "ticket_number": Any<Number>,
  "ticket_view_mode": Any<Number>,
  "unit_number": Any<Number>,
}
`;

exports[`renders displayTicketDetails( ) correctly 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 12,
        "height": 200,
        "marginBottom": 20,
        "marginLeft": "10%",
        "marginTop": 20,
        "textAlign": "left",
        "width": "80%",
      }
    }
    testID="ticketContainer"
  >
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      <View
        testID="unit_number"
      >
        <Text
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Location: Apt. 
          316
          , 
        </Text>
      </View>
      <View
        testID="location"
      >
        Whispering Pines
         
        

      </View>
    </Text>
    <Text
      style={
        Object {
          "fontSize": 18,
        }
      }
    >
      <Text
        testID="status"
      >
        Status: Open
      </Text>
        
      

    </Text>
    <View
      testID="emergency"
    >
      <Text
        testID="emergency"
      >
        Level: Normal
      </Text>
       
      

    </View>
    <View>
      <Text
        testID="ticket_number"
      >
        Ticket ID #
        99999
      </Text>
        
      

    </View>
    <View
      testID="timestamp"
    >
      Timestamp: 
      
    </View>
    <View />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <View
        accessibilityLabel="Edit Ticket Button"
        accessibilityRole="button"
        accessibilityState={Object {}}
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Edit Ticket
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <View
        accessibilityLabel="Edit Ticket Button"
        accessibilityRole="button"
        accessibilityState={Object {}}
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Show Ticket List
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders editTicket() view correctly 1`] = `
<View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "fontSize": 20,
        "height": 50,
        "margin": 20,
        "width": "80%",
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "Whispering Pines",
            "textColor": undefined,
            "value": "Whispering Pines",
          },
          Object {
            "label": "Richmond Hills",
            "textColor": undefined,
            "value": "Richmond Hills",
          },
          Object {
            "label": "Stoughton Arms",
            "textColor": undefined,
            "value": "Stoughton Arms",
          },
          Object {
            "label": "Lincoln Avenue Apartments",
            "textColor": undefined,
            "value": "Lincoln Avenue Apartments",
          },
          Object {
            "label": "Tuc-A-Way Apartments",
            "textColor": undefined,
            "value": "Tuc-A-Way Apartments",
          },
        ]
      }
      onChange={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    maxLength={5}
    onChangeText={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    placeholder="Unit Number (type in box)"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "color": "black",
        "fontSize": 20,
        "height": 50,
        "marginLeft": "10%",
        "width": "80%",
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Object {
        "alignSelf": "center",
        "fontSize": 20,
        "height": 50,
        "margin": 20,
        "width": "80%",
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "Open ticket",
            "textColor": undefined,
            "value": "Open ticket",
          },
          Object {
            "label": "Closed ticket",
            "textColor": undefined,
            "value": "Closed ticket",
          },
        ]
      }
      onChange={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "fontSize": 20,
        "height": 50,
        "margin": 20,
        "width": "80%",
      }
    }
  >
    <RCTPicker
      items={
        Array [
          Object {
            "label": "No emergency",
            "textColor": undefined,
            "value": "No emergency",
          },
          Object {
            "label": "Yes emergency",
            "textColor": undefined,
            "value": "Yes emergency",
          },
        ]
      }
      onChange={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "width": "30%",
      }
    }
  >
    <View
      accessibilityLabel="Submit Ticket Update Button"
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Submit Ticket Update
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders ticketList() view correctly 1`] = `
<View>
  <RCTScrollView
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
  >
    <View>
      <Text
        style={
          Object {
            "backgroundColor": "white",
            "height": 400,
            "margin": 20,
          }
        }
      >
        in progress
      </Text>
      <Text
        style={
          Object {
            "backgroundColor": "white",
            "height": 300,
            "margin": 20,
          }
        }
      >
        in progress
      </Text>
      <Text
        style={
          Object {
            "backgroundColor": "white",
            "height": 200,
            "margin": 20,
          }
        }
      >
        in progress
      </Text>
      <Text
        style={
          Object {
            "backgroundColor": "white",
            "height": 100,
            "margin": 20,
          }
        }
      >
        in progress
      </Text>
      <View
        accessibilityLabel="Edit Ticket Button"
        accessibilityRole="button"
        accessibilityState={Object {}}
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Back
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
